--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^4.1.1",
     "vue-clamp": "^0.2.2",
+    "vue-fullpage.js": "^0.1.5",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.3"
